# Parallel-pyJedAI

./: .gitignore  CleanCleanER-AbtBuy.ipynb  D1_BW.py  Datasets.ipynb  Demo.ipynb  DevCCER.ipynb  DevCCER_TFIDF.ipynb  DevCCERwithEmbeddings-Amazon_GP.ipynb  DevCCERwithEmbeddings-Wallmart_Amazon.ipynb  DevCCERwithEmbeddings.ipynb  DevCleanCleanER.ipynb  DevCleanCleanERwithoutGT.ipynb  DevCleanCleanPER.ipynb  DevDirtyER.ipynb  DevJoins.ipynb  DevOptuna.ipynb  DevSupervisedER.ipynb  DevWorkFlow.ipynb  DirtyER-Cora.ipynb  GridSearchBW.py  GridSearchBW_D2.py  GridSearchBW_D3.py  GridSearchBW_D8.py  GridSearchJoins.py  OptunaTunning.ipynb  Profiling.ipynb  README.md  Readers.ipynb  SupervisedER.ipynb  TestDataset.ipynb  VBW.py  VectorBasedPER.ipynb  WorkFlow.ipynb  _profiling.py  blocking_workflow_optuna_d1.py  blocking_workflow_optuna_d2.py  joins_gridsearch.py  optuna_em_script.py  pyJedAIwithOptuna.ipynb  pyjedai.db  (+4 more)
.github/: workflows.yml
.ipynb_checkpoints/: CleanCleanER-AbtBuy-checkpoint.ipynb
benchmarks/: clean_clean_er.py  dirty_er.py  release_04to05.csv
data/: 100Kduplicates.csv  10K.csv  200Kduplicates.csv  300Kduplicates.csv  50Kduplicates.csv
dev-only/: FAISS.ipynb  FALCON.ipynb  FastTextToAllDatasets.ipynb  SCANN.ipynb  supervised_main.py  supervised_utils.py  vectorization.py
docs/: logo.pptm  stelar-logo.jfif  workflow-example.odp
examples/: clean_clean_er.ipynb
notebooks/: CleanCleanER.ipynb  CleanCleanERwithoutGT.ipynb  DevCCER.ipynb  DevCCEREmbeddings.ipynb  DevCCER_TFIDF.ipynb  DevCCERnoGT.ipynb  DevCleanCleanPER.ipynb  DevDER.ipynb  pyjedai.db  (+11 more)
(+181 files in other folders)
