# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyjedai"
version = "0.0.3"
description = "An open-source library that builds powerful end-to-end Entity Resolution workflows."
readme = "README.md"
authors = [
    { name = "Konstantinos Nikoletos", email = "nikoletos.kon@gmail.com" },
    { name = "George Papadakis", email = "gpapadis84@gmail.com" },
]
license = {text = "Apache Software License 2.0"}
requires-python = ">=3.7"
dependencies = [
    "gensim >= 4.2.0",
    "matplotlib >= 3.1.3",
    "matplotlib-inline >= 0.1.3",
    "networkx >= 2.3",
    "nltk >= 3.7",
    "numpy >= 1.21",
    "pandas >= 0.25.3",
    "pandas-profiling >= 3.2",
    "pandocfilters >= 1.5",
    "PyYAML >= 6.0",
    "rdflib >= 6.1.1",
    "rdfpandas >= 1.1.5",
    "regex >= 2022.6.2",
    "scipy >= 1.7",
    "seaborn >= 0.11",
    "strsim >= 0.0.3",
    "strsimpy >= 0.2.1",
    "tqdm >= 4.64",
    "transformers >= 4.21",
    "sentence-transformers >= 2.2",
    "faiss-cpu >= 1.7",
    "optuna >= 3.0",
    'tomli; python_version < "3.11"',
    "py-stringmatching >= 0.4",
    "valentine>=0.1; python_version > '3.7'",
    "ordered-set >= 4.0"
]

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]
